@@ -130,7 +130,7 @@ function refresh_conns() {
 function update_connection_info(ci) {
 	var s = 'Connection ID ' + ci.ID + ':\n'
 
-	s += (ci.Incomming ? 'Coming from ' : 'Going to ') + ci.PeerIp + '\n'
+	s += ci.LocalAddr + (ci.Incomming ? ' <== ' : ' ==> ') + ci.RemoteAddr + '\n'
 	s += 'Connected at ' + tim2str(Date.parse(ci.ConnectedAt)/1000) + '\n'
 	s += 'Node Version: ' + ci.Version + ' / Services: 0x' + ci.Services.toString(16) + '\n'
 	s += 'User Agent: ' + ci.Agent + '\n'
